--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                            <div class="col-md-6">
                               <div class="padding_left_0">
                                  <h1 class="retailer_text">Turning Your Dreams into Reality</h1>
-                                 <p class="search_text"> Harmeet Singh provide personalized mortgage solutions with expert guidance to help you achieve your homeownership goals with confidence.</p>
+                                 <p class="search_text"> Fincare Mortgages provide personalized mortgage solutions with expert guidance to help you achieve your homeownership goals with confidence.</p>
                                  <div class="btn_main">
                                     <div class="more_bt"><a href="#">Read More </a></div>
                                     <div class="contact_bt"><a href="https://form.jotform.com/242592284163863">Contact Us</a></div>
@@ -400,7 +400,7 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">ADDRESS</h4>
-                  <p class="simply_text">Harmeet Singh Property @ Rivet ACT</p>
+                  <p class="simply_text"> 123 Property @ Rivet ACT</p>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">QUICK LINKS</h4>
