--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-md-3">
-                  <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+                  <div class="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
                </div>
+              <!--  <div class="">
+                  <div class="retailer_text" > 0432 662 488</div>
+               </div> -->
+               
                <div class="col-md-9">
                   <div class="menu_text">
                      <ul>
@@ -159,10 +163,10 @@
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12">
-                     <div class="box_main active">
-                        <div class="image_4 active"></div>
-                        <h4 class="consultative_text active">Home Loan</h4>
-                        <p class="readable_text active">We simplify the process and take the stress out while you are busy selecting your first home or an investment property. No matter what your circumstances, we can assist in finding the right home loans, from our range of Australia’s leading lenders. We will do all the research and then present you with all your options. </p>
+                     <div class="box_main ">
+                        <div class="image_4 "></div>
+                        <h4 class="consultative_text ">Home Loan</h4>
+                        <p class="readable_text ">We simplify the process and take the stress out while you are busy selecting your first home or an investment property. No matter what your circumstances, we can assist in finding the right home loans, from our range of Australia’s leading lenders. We will do all the research and then present you with all your options. </p>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12">
@@ -190,7 +194,7 @@
  &nbsp;&nbsp; &nbsp;&nbsp; We understand that securing a mortgage can be a complex and daunting process. That's why we offer comprehensive support and a range of loan options to ensure you find the perfect fit for your needs. From first-time homebuyers to seasoned investors, our goal is to make your mortgage journey smooth, stress-free, and successful.  <br> 
 
 &nbsp; We pride ourselves on our commitment to delivering exceptional service and expert advice, helping you achieve your financial objectives with confidence. Let us be your trusted partner on your path to homeownership.</p> </p>
-                  <div class="more_bt"><a href="#">Read More </a></div>
+                  <div class="more_bt"><a href="#my_slider">Read More </a></div>
                </div>
             </div>
          </div>
@@ -263,7 +267,7 @@
                  What is Best Exclusively for You
                </h1>
                <p class="best_text">Personalized Approach: Direct, one-on-one service from an experienced broker and owner.</p>
-               <div class="get_bt"><a href="https://form.jotform.com/242592284163863">Contact Us</a></div>
+               <div class="get_bt"><a href="https://form.jotform.com/242592284163863 ">Contact Us</a></div>
             </div>
          </div>
       </div>
@@ -287,7 +291,7 @@
       </div>
       <!-- consulting section end -->
       <!-- client section start -->
-      <div class="client_section layout_padding">
+      <!-- <div class="client_section layout_padding">
          <div class="container">
             <h1 class="what_text">What Is Says Our Clients</h1>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -363,7 +367,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- client section end -->
       <!-- contact section start -->
      <!--  <div class="Contact_section layout_padding">
@@ -400,7 +404,7 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">ADDRESS</h4>
-                  <p class="simply_text">1313 Property @ Rivet ACT</p>
+                  <p class="simply_text">Fincare Mortgages Property @ Rivet ACT</p>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">QUICK LINKS</h4>
