--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">ADDRESS</h4>
-                  <p class="simply_text">Harmeet Singh Property @ Rivet ACT</p>
+                  <p class="simply_text">Fincare Mortgages Property @ Rivet ACT</p>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">QUICK LINKS</h4>
