--- a/services.html
+++ b/services.html
@@ -125,63 +125,64 @@
         </div>
         <div class="portfolio_section_2 layout_padding">
             <div class="container">
-                <h1 class="best_taital">We Are Providing
- Best Business Service</h1>
-                <p class="best_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                <div class="get_bt"><a href="#">Get A Quote</a></div>
+               <h1 class="best_taital">Providing
+                 What is Best Exclusively for You
+               </h1>
+               <p class="best_text">Personalized Approach: Direct, one-on-one service from an experienced broker and owner.</p>
+               <div class="get_bt"><a href="https://form.jotform.com/242592284163863 ">Contact Us</a></div>
             </div>
-        </div>
-    </div>
+         </div>
+      </div>
     <!-- portfolio section end -->
     <!-- footer section start -->
-    <div class="footer_section layout_padding">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-lg-3 col-sm-6">
-    				<h4 class="address_text">ADDRESS</h4>
-    				<p class="simply_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been  </p>
-    			</div>
-    			<div class="col-lg-3 col-sm-6">
-    				<h4 class="address_text">QUICK LINKS</h4>
-    				<div class="footer_menu_main">
-    				    <div class="footer_menu">
-    				    	<ul>
-    				    		<li><a href="index.html.html">Home</a></li>
-    				    		<li><a href="blog.html">Blog</a></li>
-    				    		<li><a href="about.html">About</a></li>
-    				    		<li><a href="services.html">Services</a></li>
-    				    		<li><a href="contact.html">Contact Us</a></li>
-    				    	</ul>
-    				    </div>
-    				</div>
-    			</div>
-    			<div class="col-lg-6 col-sm-12">
-    				<div class="newsletter_section">
-    					<div class="newsletter_left">
-    						<h4 class="address_text">Newsletter</h4>
-    					</div>
-    					<div class="newsletter_right">
-    						<div class="social_icon">
-    				    	    <ul>
-    				    	    	<li><a href="#"><img src="images/fb-icon.png"></a></li>
-    				    	    	<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-    				    	    	<li><a href="#"><img src="images/instagram-icon.png"></a></li>
-    				    	    </ul>
-    				        </div>
-    					</div>
-    				</div>
-    				<input type="text" class="mail_bt" placeholder="Enter Your Email" name="Enter Your Email">
-    				<input type="text" class="mail_bt" placeholder="Phone" name="Phone">
-    				<div class="subscribe_bt"><a href="#">Subscribe</a></div>
-    			</div>
-    		</div>
-    	</div>
-    </div>
+     <div class="footer_section layout_padding">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-3 col-sm-6">
+                  <h4 class="address_text">ADDRESS</h4>
+                  <p class="simply_text">Fincare Mortgages Property @ Rivet ACT</p>
+               </div>
+               <div class="col-lg-3 col-sm-6">
+                  <h4 class="address_text">QUICK LINKS</h4>
+                  <div class="footer_menu_main">
+                     <div class="footer_menu">
+                        <ul>
+                           <li><a href="index.html.html">Home</a></li>
+                           <li><a href="blog.html">Blog</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="services.html">Services</a></li>
+                           <li><a href="https://form.jotform.com/242592284163863">Contact Us</a></li>  
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+                <!-- <div class="newsletter_section">
+                     <div class="newsletter_left">
+                        <h4 class="address_text">Newsletter</h4>
+                     </div>
+                     <div class="newsletter_right">
+                        <div class="social_icon">
+                           <ul>
+                              <li><a href="#"><img src="images/fb-icon.png"></a></li>
+                              <li><a href="#"><img src="images/twitter-icon.png"></a></li>
+                              <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                           </ul>
+                        </div>
+                     </div>
+                  </div> -->
+                  <!-- <input type="text" class="mail_bt" placeholder="Enter Your Email" name="Enter Your Email">
+                  <input type="text" class="mail_bt" placeholder="Phone" name="Phone"> -->
+                  <div class="subscribe_bt"><a href="https://form.jotform.com/242592284163863">Contact Us</a></div>
+               </div>
+            </div>
+         </div>
+      </div>
+
     <!-- footer section end -->
     <!-- copyright section start -->
-    <div class="copyright_section">
+    <!-- <div class="copyright_section">
     	<div class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://html.design">Free html  Templates</a></div>
-    </div>
+    </div> -->
     <!-- copyright section end -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
