--- a/client.html
+++ b/client.html
@@ -63,7 +63,7 @@
     </div>
     <!-- header section end -->
     <!-- client section start -->
-    <div class="client_section layout_padding">
+   <!--  <div class="client_section layout_padding">
         <div class="container">
             <h1 class="what_text">What Is Says Our Clients</h1>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- client section end -->
     <!-- footer section start -->
@@ -147,7 +147,7 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">ADDRESS</h4>
-                  <p class="simply_text">Harmeet Singh Property @ Rivet ACT</p>
+                  <p class="simply_text">Fincare Mortgages Property @ Rivet ACT</p>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h4 class="address_text">QUICK LINKS</h4>
